https://bugs.webkit.org/show_bug.cgi?id=34772 Overzealous new assertion in URStringImpl::adopt()

Reviewed by Adam Barth.

* runtime/UStringImpl.h:
(JSC::UStringImpl::adopt):
Only assert that vector.data() is non-zero if vector.size() is non-zero.



Canonical link: https://commits.webkit.org/45876@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54563 268f45cc-cd09-0410-ab3c-d52691b4dbfc